[gd_scene load_steps=11 format=3 uid="uid://balfc7h6w65xi"]

[ext_resource type="Script" path="res://scripts/ZeepBop.gd" id="1_a1bt7"]
[ext_resource type="Texture2D" uid="uid://bmyut0ejjbjmp" path="res://sprites/creature/Creature1.png" id="1_k5uc4"]
[ext_resource type="Texture2D" uid="uid://bx44hwce668im" path="res://sprites/creature/Creature2.png" id="2_tksx2"]
[ext_resource type="Texture2D" uid="uid://cnvtr5myqdgte" path="res://sprites/creature/Creature3.png" id="3_8k8i3"]
[ext_resource type="Texture2D" uid="uid://ckxa6h6x5dh8g" path="res://sprites/creature/Creature4.png" id="4_e51dq"]
[ext_resource type="Script" path="res://scripts/FiniteStateMachine.gd" id="6_am4i0"]
[ext_resource type="Script" path="res://scripts/ZeepBopChaseState.gd" id="7_f5cjo"]
[ext_resource type="Script" path="res://scripts/ZeepBopIdleState.gd" id="8_oguvh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vfy14"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_k5uc4")
}, {
"duration": 1.0,
"texture": ExtResource("2_tksx2")
}, {
"duration": 1.0,
"texture": ExtResource("3_8k8i3")
}, {
"duration": 3.0,
"texture": ExtResource("4_e51dq")
}, {
"duration": 1.0,
"texture": ExtResource("3_8k8i3")
}, {
"duration": 1.0,
"texture": ExtResource("2_tksx2")
}, {
"duration": 1.0,
"texture": ExtResource("1_k5uc4")
}],
"loop": true,
"name": &"Bouncing",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_156ij"]
radius = 12.0
height = 34.0

[node name="ZeepBop" type="CharacterBody2D"]
script = ExtResource("1_a1bt7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vfy14")
animation = &"Bouncing"
autoplay = "Bouncing"
frame_progress = 0.960737

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_156ij")

[node name="PointOfView" type="RayCast2D" parent="."]
position = Vector2(0, -12)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("6_am4i0")
state = NodePath("ZeepBopIdleState")

[node name="ZeepBopChaseState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "point_of_view")]
script = ExtResource("7_f5cjo")
actor = NodePath("../..")
point_of_view = NodePath("../../PointOfView")

[node name="ZeepBopIdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "point_of_view")]
script = ExtResource("8_oguvh")
actor = NodePath("../..")
point_of_view = NodePath("../../PointOfView")
